--- a/links/main.css
+++ b/links/main.css
@@ -1,7 +1,7 @@
 header .background { background-image: url('../media/content/rabbit_main.jpg');height: 85vh;background-position: center; background-repeat: no-repeat;background-size: cover;position: relative;}
-header .maintext { text-align: center;position: absolute;top: 90%;left: 50%;transform: translate(-50%, -50%);color: black; font-size: 80px;}
+header .maintext { text-align: center;position: absolute;top: 98%;left: 50%;transform: translate(-50%, -50%);color: black; font-size: 80px;}
 header {max-width: 1280px; padding-bottom: 0px; padding-top: 0px; margin: none;}
-header h1 { font-size: 40px; font-weight: bold; text-transform: uppercase; letter-spacing: 6px; font-weight: normal; margin-bottom:15px;}
+header h1 {font-size: 40px; font-weight: bold; text-transform: uppercase; letter-spacing: 6px; font-weight: normal; margin-bottom:15px;}
 header h2 { font-size: 20px; font-weight: bold; text-transform: uppercase; letter-spacing: 6px; font-weight: normal; margin-bottom:15px;}
 
 main img { width:100%; max-width: 800px; margin-bottom: 15px;}
@@ -12,6 +12,6 @@ a {color: black; text-decoration: underline;}
 main .button { background-color: #000;border: 2px solid white;color: white;padding: 13px 28px;text-align: center;text-decoration: none;display: inline-block;font-size: 14px;border-radius: 200px;font-weight: bold; margin-right: 15px; margin-bottom: 30px;}
 main .button:hover { background-color: #333 !important; color: white; }
 
-footer { background: #fff; color: #000; line-height: 30px; font-size: 15px; color: black; padding:10px }
+footer { background: #fff; color: #000; line-height: 30px; font-size: 15px; color: black; padding:10px; padding-top: 30px}
 footer a {color: black; text-decoration: none}
 footer a:hover { cursor: pointer; text-decoration: underline;}
