--- a/links/main.css
+++ b/links/main.css
@@ -6,10 +6,21 @@ header h1 {text-align: center;font-size: 20px; font-weight: bold; text-transform
 header .title { margin-bottom:40px }
 
 main gallery img {padding-bottom: 10px; padding-right: 20px;display: inline-block }
+p { display:block; color:rgba(0,0,0,0); position:absolute }
+
+#wrap { max-width:100vw;position:relative;width:100%;margin:0 auto }
+#wrap span { text-indent:-9999px }
+#wrap a { display:block;position:absolute }
+#wrap a * { display:none }
 
 footer { margin-top:30px }
 
-p { display:block; color:rgba(0,0,0,0); position:absolute }
+#wrapfooter { max-width:100vw;position:relative;width:627px;margin:0 auto }
+#wrapfooter span { text-indent:-9999px }
+#wrapfooter a { display:block;position:absolute }
+#wrapfooter a * { display:none }
+#wrapfooter a.hundredrabbits { width: 36%;height: 83%;top: 9%;left: 8%; }
+#wrapfooter a.license { width: 26%;height: 77%;top: 7%;left: 66%;}
 
 @media print {
 	p { display:block; color:black }
