--- a/links/main.css
+++ b/links/main.css
@@ -5,7 +5,8 @@ header {max-width: 100%; padding-bottom: 0px; margin: none;}
 header h1 {text-align: center;font-size: 20px; font-weight: bold; text-transform: uppercase; letter-spacing: 6px; font-weight: normal; margin-bottom:15px; margin-top: 2px}
 header .title { margin-bottom:40px }
 
-main gallery img {padding-bottom: 10px; padding-right: 20px;display: inline-block }
+main .title { margin-bottom:30px; margin-top:30px }
+main gallery img {padding-bottom: 10px; padding-right: 20px;}
 p { display:block; color:rgba(0,0,0,0); position:absolute }
 
 #wrap { max-width:100vw;position:relative;width:100%;margin:0 auto }
@@ -19,8 +20,9 @@ footer { margin-top:30px }
 #wrapfooter span { text-indent:-9999px }
 #wrapfooter a { display:block;position:absolute }
 #wrapfooter a * { display:none }
-#wrapfooter a.hundredrabbits { width: 36%;height: 83%;top: 9%;left: 8%; }
-#wrapfooter a.license { width: 26%;height: 77%;top: 7%;left: 66%;}
+#wrapfooter a.hundredrabbits {width: 34%;height: 83%;top: 9%;left: 19%;}
+#wrapfooter a.license {width: 26%;height: 77%;top: 7%;left: 75%;}
+#wrapfooter a.about {width: 14%;height: 83%;top: 7%;left: 0%;}
 
 @media print {
 	p { display:block; color:black }
