--- a/links/main.css
+++ b/links/main.css
@@ -3,25 +3,25 @@ body img {display:block;margin:0px auto;max-width: 100%}
 
 header {max-width: 100%; padding-bottom: 0px; margin: none;}
 header h1 {display: none;text-align: center;font-size: 20px; font-weight: bold; text-transform: uppercase; letter-spacing: 6px; font-weight: normal; margin-bottom:15px; margin-top: 2px}
-header .title { margin-bottom:40px }
+header .title {margin-bottom:40px }
 
-main .title { margin-bottom:30px; margin-top:30px }
+main .title {margin-bottom:30px; margin-top:30px }
 main nav img {padding-bottom: 10px; padding-right: 20px;}
-nav {display: none}
-p { display:block; color:rgba(0,0,0,0); position:absolute }
+nav {position:absolute; overflow:hidden; left: -9999px}
+p {display:block; color:rgba(0,0,0,0); position:absolute}
 h2 {display: none}
 
-#wrap { max-width:100vw;position:relative;width:100%;margin:0 auto }
-#wrap span { text-indent:-9999px }
-#wrap a { display:block;position:absolute }
-#wrap a * { display:none }
+#wrap {max-width:100vw;position:relative;width:100%;margin:0 auto}
+#wrap span {text-indent:-9999px}
+#wrap a { display:block;position:absolute}
+#wrap a * {display:none }
 
 footer { margin-top:30px }
 
-#wrapfooter { max-width:100vw;position:relative;width:627px;margin:0 auto }
-#wrapfooter span { text-indent:-9999px }
+#wrapfooter {max-width:100vw;position:relative;width:627px;margin:0 auto}
+#wrapfooter span {text-indent:-9999px}
 #wrapfooter a { display:block;position:absolute }
-#wrapfooter a * { display:none }
+#wrapfooter a * {display:none }
 #wrapfooter a.hundredrabbits {width: 34%;height: 83%;top: 9%;left: 19%;}
 #wrapfooter a.license {width: 26%;height: 77%;top: 7%;left: 75%;}
 #wrapfooter a.about {width: 14%;height: 83%;top: 7%;left: 0%;}
