--- a/links/main.css
+++ b/links/main.css
@@ -2,14 +2,14 @@ body {max-width: 900px;margin:30px auto; padding-top: 0px}
 body img {display:block;margin:0px auto;max-width: 100%}
 
 header {max-width: 100%; padding-bottom: 0px; margin: none;}
-header h1 {display: none;text-align: center;font-size: 20px; font-weight: bold; text-transform: uppercase; letter-spacing: 6px; font-weight: normal; margin-bottom:15px; margin-top: 2px}
+header h1 {position:absolute; overflow:hidden; left: -9999px}
 header .title {margin-bottom:40px }
 
 main .title {margin-bottom:30px; margin-top:30px }
 main nav img {padding-bottom: 10px; padding-right: 20px;}
 nav {position:absolute; overflow:hidden; left: -9999px}
-p {display:block; color:rgba(0,0,0,0); position:absolute}
-h2 {display: none}
+p {display:block; color:rgba(0,0,0,0); position:absolute; left: -9999px; top: 0px}
+h2 {position:absolute; overflow:hidden; left: -9999px}
 
 #wrap {max-width:100vw;position:relative;width:100%;margin:0 auto}
 #wrap span {text-indent:-9999px}
@@ -28,5 +28,5 @@ footer { margin-top:30px }
 
 @media print {
 	p { display:block; color:black }
-	.noprint { display:none }
+	.noprint {display:none;}
 }
