--- a/links/main.css
+++ b/links/main.css
@@ -11,6 +11,16 @@ nav {position:absolute; overflow:hidden; left: -9999px}
 p {display:block; color:rgba(0,0,0,0); position:absolute; left: -9999px; top: 0px}
 h2 {position:absolute; overflow:hidden; left: -9999px}
 
+#wrapsupport {max-width:100vw;position:relative;width:627px;margin:0 auto}
+#wrapsupport span {text-indent:-9999px}
+#wrapsupport a { display:block;position:absolute }
+#wrapsupport a * {display:none }
+#wrapsupport a.paypal {width: 10%;height: 90%;top: 7%;left: 35%;}
+#wrapsupport a.patreon {width: 10%;height: 90%;top: 7%;left: 67%;}
+#wrapsupport a.stripe {width: 10%;height: 90%;top: 7%;left: 24%;}
+#wrapsupport a.itchio {width: 10%;height: 90%;top: 7%;left: 46%;}
+#wrapsupport a.liberapay {width: 10%;height: 90%;top: 7%;left: 57%;}
+
 #wrap {max-width:100vw;position:relative;width:100%;margin:0 auto}
 #wrap span {text-indent:-9999px}
 #wrap a { display:block;position:absolute}
