--- a/links/main.css
+++ b/links/main.css
@@ -3,7 +3,7 @@ body img {display:block;margin:0px auto;max-width: 100%}
 
 header {max-width: 100%; padding-bottom: 0px; margin: none;}
 header h1 {position:absolute; overflow:hidden; left: -9999px}
-header .title {margin-bottom:40px }
+header .title {margin-bottom:40px; max-width: 400px}
 
 main .title {margin-bottom:30px; margin-top:30px }
 main nav img {padding-bottom: 10px; padding-right: 20px;}
@@ -11,15 +11,15 @@ nav {position:absolute; overflow:hidden; left: -9999px}
 p {display:block; color:rgba(0,0,0,0); position:absolute; left: -9999px; top: 0px}
 h2 {position:absolute; overflow:hidden; left: -9999px}
 
-#wrapsupport {max-width:100vw;position:relative;width:627px;margin:0 auto}
+#wrapsupport {max-width:100vw;position:relative;width:325px;margin:0 auto}
 #wrapsupport span {text-indent:-9999px}
 #wrapsupport a { display:block;position:absolute }
 #wrapsupport a * {display:none }
-#wrapsupport a.paypal {width: 10%;height: 90%;top: 7%;left: 35%;}
-#wrapsupport a.patreon {width: 10%;height: 90%;top: 7%;left: 67%;}
-#wrapsupport a.stripe {width: 10%;height: 90%;top: 7%;left: 24%;}
-#wrapsupport a.itchio {width: 10%;height: 90%;top: 7%;left: 46%;}
-#wrapsupport a.liberapay {width: 10%;height: 90%;top: 7%;left: 57%;}
+#wrapsupport a.paypal {width: 18%;height: 90%;top: 7%;left: 23%;}
+#wrapsupport a.patreon {width: 18%;height: 90%;top: 7%;left: 81%;}
+#wrapsupport a.stripe {width: 18%;height: 90%;top: 7%;left: 2%;}
+#wrapsupport a.itchio {width: 18%;height: 90%;top: 7%;left: 41%;}
+#wrapsupport a.liberapay {width: 18%;height: 90%;top: 7%;left: 62%;}
 
 #wrap {max-width:100vw;position:relative;width:100%;margin:0 auto}
 #wrap span {text-indent:-9999px}
@@ -39,4 +39,12 @@ footer { margin-top:30px }
 @media print {
 	p { display:block; color:black }
 	.noprint {display:none;}
+}
+
+/* Mobile */
+
+@media only screen and (max-width: 1100px) {
+	main, header, footer {padding-top: 10px;padding-right: 20px;padding-bottom: 0px;padding-left: 20px;}
+	#wrapfooter {max-width: 100%}
+	header .title {max-width: 100%}
 }
