--- a/links/main.css
+++ b/links/main.css
@@ -7,11 +7,12 @@ header .title {margin-bottom:40px; max-width: 400px}
 
 main .title {margin-bottom:30px; margin-top:30px }
 main nav img {padding-bottom: 10px; padding-right: 20px;}
+main .maintitle {width: 50%}
 nav {position:absolute; overflow:hidden; left: -9999px}
 p {display:block; color:rgba(0,0,0,0); position:absolute; left: -9999px; top: 0px}
 h2 {position:absolute; overflow:hidden; left: -9999px}
 
-#wrapsupport {max-width:100vw;position:relative;width:325px;margin:0 auto}
+#wrapsupport {max-width:100vw;position:relative;width:250px;margin:0 auto}
 #wrapsupport span {text-indent:-9999px}
 #wrapsupport a { display:block;position:absolute }
 #wrapsupport a * {display:none }
@@ -46,6 +47,7 @@ footer { margin-top:30px }
 @media only screen and (max-width: 1100px) {
 	main, header {padding-top: 10px;padding-right: 20px;padding-bottom: 0px;padding-left: 20px;}
 	#wrapfooter {max-width: 100%}
+	main .maintitle {width: 100%}
 	header .title {max-width: 90%; margin-bottom: 20px}
 	footer {padding-top: 0px; padding-right: 20px;padding-bottom: 0px;padding-left: 20px; margin-top: 20px}
 }
